@@ -29,7 +29,6 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.net.URL;
 
 import static java.lang.Thread.sleep;
 
@@ -70,12 +69,6 @@ public class LanternaCombat {
         BasicWindow window = new BasicWindow("Menu DarkTower");
         window.setHints(List.of(Window.Hint.CENTERED));
         Panel panel = new Panel(new GridLayout(1));
-
-        panel.addComponent(new EmptySpace()); // espace vide pour l'esthétique
-        panel.addComponent(new Label("Oserez-vous gravir les 20 étages de la DarkTower ?"));
-        panel.addComponent(new Label("Affrontez le Minotaurus à chaque niveau, gérez vos ressources,"));
-        panel.addComponent(new Label("et devenez le maître de la tour dans ce jeu stratégique au tour par tour."));
-        panel.addComponent(new EmptySpace());
 
         panel.addComponent(new Label("===== MENU DarkTower ====="));
         panel.addComponent(new Button("1. S'inscrire", () -> {
@@ -166,35 +159,21 @@ public class LanternaCombat {
                 String json = "{\"username\":\"" + usernameBox.getText() + "\",\"password\":\"" + passwordBox.getText() + "\"}";
                 String response = sendRequest("http://localhost:8080/login", "POST", json, null);
 
-                // Si c’est une erreur
-                if (response.startsWith("ERROR_403:") || response.startsWith("ERROR_401:")) {
-                    String errorJson = response.substring(response.indexOf(":") + 1);
-                    try {
-                        ObjectMapper mapper = new ObjectMapper();
-                        JsonNode errorNode = mapper.readTree(errorJson);
-                        String message = errorNode.has("error") ? errorNode.get("error").asText() : "Nom d'utilisateur ou mot de passe incorrect.";
-                        MessageDialog.showMessageDialog(gui, "Erreur", message);
-                    } catch (Exception ex) {
-                        MessageDialog.showMessageDialog(gui, "Erreur", "Nom d'utilisateur ou mot de passe incorrect.");
-                    }
-                    return;
-                }
-
-
                 ObjectMapper mapper = new ObjectMapper();
                 JsonNode node = mapper.readTree(response);
 
                 JsonNode tokenNode = node.get("token");
                 JsonNode usernameNode = node.get("username");
                 JsonNode userIdNode = node.get("userId");
+                userId = userIdNode.asInt();
 
                 if (tokenNode != null && usernameNode != null && userIdNode != null) {
                     isLoggedIn = true;
                     jwtToken = tokenNode.asText();
                     NomUser = usernameNode.asText();
-                    userId = userIdNode.asInt();
 
-                    MessageDialog.showMessageDialog(gui, "Succès", "Bienvenue " + NomUser);
+                    MessageDialog.showMessageDialog(gui, "Succès",
+                            "Bienvenue " + usernameNode.asText());
                     window.close();
                     showLoggedInMenu(gui);
                 } else {
@@ -202,7 +181,7 @@ public class LanternaCombat {
                 }
 
             } catch (Exception e) {
-                MessageDialog.showMessageDialog(gui, "Erreur", "Une erreur est survenue : " + e.getMessage());
+                MessageDialog.showMessageDialog(gui, "Erreur", e.getMessage());
             }
         }));
 
@@ -212,8 +191,6 @@ public class LanternaCombat {
         window.setComponent(panel);
         gui.addWindowAndWait(window);
     }
-
-
 
     private static void showLoggedInMenu(MultiWindowTextGUI gui) {
         BasicWindow window = new BasicWindow("Connecté");
@@ -484,28 +461,10 @@ public class LanternaCombat {
                 lblTour, lblJoueurPV, lblMinotaurePV, lblEtage,
                 historyPanel, gui, screen, window, mainPanel));
 
-        Button btnQuitter = new Button("Abandonner ", () -> {
-            try {
-                // Ferme d'abord la fenêtre active (combat)
-                Window activeWindow = gui.getActiveWindow();
-                if (activeWindow != null) {
-                    activeWindow.close();
-                }
-
-                // Ensuite, ferme toutes les autres fenêtres si jamais il en reste
-                for (Window w : gui.getWindows()) {
-                    w.close();
-                }
-
-                // Recharge le menu connecté
-                showLoggedInMenu(gui);
-
-            } catch (Exception e) {
-                e.printStackTrace();
-                MessageDialog.showMessageDialog(gui, "Erreur", "Une erreur est survenue :\n" + e.toString());
-            }
+        Button btnQuitter = new Button("Abondonner ?", () -> {
+            window.close();
+            showLoggedInMenu(gui);
         });
-
 
         contentPanel.addComponent(btnAttaquer);
         contentPanel.addComponent(btnItem);
@@ -922,10 +881,8 @@ public class LanternaCombat {
         }
     }
 
-
     private static String sendRequest(String urlString, String method, String body, String token) throws Exception {
-        URI uri = new URI(urlString); // Remplacer String par URI
-        URL url = uri.toURL(); // Conversion en URL
+        URL url = new URL(urlString);
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestMethod(method);
         con.setRequestProperty("Content-Type", "application/json");
@@ -942,29 +899,22 @@ public class LanternaCombat {
             }
         }
 
-        int responseCode = con.getResponseCode();
-        InputStream inputStream = (responseCode >= 400) ? con.getErrorStream() : con.getInputStream();
+        InputStream inputStream;
+        if (con.getResponseCode() >= 400) {
+            inputStream = con.getErrorStream();
+        } else {
+            inputStream = con.getInputStream();
+        }
 
-        StringBuilder response = new StringBuilder();
         try (BufferedReader br = new BufferedReader(new InputStreamReader(inputStream, "utf-8"))) {
+            StringBuilder response = new StringBuilder();
             String responseLine;
             while ((responseLine = br.readLine()) != null) {
                 response.append(responseLine.trim());
             }
+            return response.toString();
         }
-
-        if (responseCode >= 400) {
-            return "ERROR_" + responseCode + ":" + response.toString();
-        }
-
-        return response.toString();
     }
-
-
-
-
-
-
 
     private static Personnage createCharacter(String characterId) {
         switch (characterId) {
